Updated Contact Us Page

--- a/client/pages/contact-us.html
+++ b/client/pages/contact-us.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="icon" type="image/png" href="/favicon.png" sizes="32x32">
+  <link rel="icon" type="image/png" href="/favicon.png" sizes="32x32">
   <title>Contact Us</title>
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet">
   <link href="../styles/contact-us.css" rel="stylesheet">
@@ -37,7 +37,13 @@
 
       <button type="submit" id="submit-button">Submit</button>
     </form>
-    <p style="margin-top: 1rem; font-size: 0.9rem;">You’ll receive a confirmation once your message is submitted.</p>
+    <p style="margin-top: 1rem; font-size: 0.9rem;">
+      You’ll receive a confirmation once your message is submitted.
+      <br>
+      We aim to respond within 2–3 business days.
+    </p>
+
+
 
   </main>
 
