--- a/client/index2.html
+++ b/client/index2.html
@@ -14,7 +14,7 @@
   </style>
 </head>
 <body>
-  <h1>Dev Navigation</h1>
+  <h1>Dev Navigations</h1>
   <ul>
     <li><a href="pages/accessibility-statement.html">Accessibility Statement</a></li>
     <li><a href="pages/contact-us.html">Contact Us</a></li>
