--- a/client/pages/tos.html
+++ b/client/pages/tos.html
@@ -74,9 +74,9 @@ Both names describe the same service and grant access to premium features.</li>
     <!-- 6. PURCHASES, BILLING & CANCELLATION -->
     <h2>6. Purchases, Billing & Cancellation</h2>
     <!-- <p><strong>6.1 One‑Time Programs.</strong> Fees are due in full at checkout and grant access only for the specified program length. No automatic renewal occurs.</p> -->
-    <p><strong>6.2 Subscriptions.</strong> Subscriptions may begin with a free trial period (for example, 3 days of free access). 
+    <p><strong>6.2 Subscriptions.</strong> Subscriptions may begin with a free trial period (for example, 1 day of free access). 
 Unless you cancel before the end of the trial, your selected payment method will automatically be charged 
-the standard monthly fee of £14.99 at the conclusion of the trial, and will continue to renew automatically each month thereafter 
+the standard monthly fee of £19.99 (or the local price shown at checkout in your region) at the conclusion of the trial, and will continue to renew automatically each month thereafter 
 until cancelled. By subscribing, you authorize us (and our payment processor) to charge your selected payment method for 
 the monthly subscription fee following any free trial. We will notify you of any future price changes in advance, and such changes 
 apply from your next renewal.</p>
