Updated Pricing Structure

--- a/client/pages/refund-policy.html
+++ b/client/pages/refund-policy.html
@@ -66,10 +66,10 @@
 
     <!-- 3. SUBSCRIPTIONS -->
 <h2>3. Subscription Billing & Cancellations</h2>
-<p>Subscriptions are billed in advance on a <strong>monthly</strong> basis and renew automatically until cancelled. By subscribing, you agree to the following cancellation terms:</p>
+<p>Subscriptions are billed in advance on a weekly basis and renew automatically until cancelled. By subscribing, you agree to the following cancellation terms:</p>
 <ul>
-  <li>Cancellations schedule your subscription to end at the next renewal date. You’ll continue to have full access until the end of your current billing cycle, and <strong>no further charges will occur after that point</strong>.</li>
-  <li>No pro-rated refunds are provided for partial-month usage.</li>
+  <li>Cancellations schedule your subscription to end at the next renewal date. You’ll continue to have full access until the end of your current billing cycle, and no further charges will occur after that point.</li>
+  <li>No pro-rated refunds are provided for partial-week usage.</li>
   <li>Charges already processed are final and non-refundable except as required by law or where the Money-Back Guarantee (Section&nbsp;2) applies.</li>
 </ul>
 
