--- a/client/pages/tos.html
+++ b/client/pages/tos.html
@@ -48,7 +48,7 @@ This may be marketed as the <em>12-Week Plan</em> on our website and is billed a
 <em>Pro Tracker</em> on your invoice/card statement (descriptor may appear as “RAISING THE BAR APP” or “Pro Tracker”).
 Both names describe the same service and grant access to premium features.</li>
       <!-- <li><strong>“One‑Time Program”</strong> means a fixed‑term digital product (e.g., 1‑Week, 4‑Week, or 12‑Week Plan) purchased for a single fee.</li> -->
-      <li><strong>“Billing Cycle”</strong> means the monthly period for which subscription fees are charged in advance.
+            <li><strong>“Billing Cycle”</strong> means the weekly period for which subscription fees are charged in advance.
       </li>
     </ul>
 
@@ -75,10 +75,10 @@ Both names describe the same service and grant access to premium features.</li>
     <h2>6. Purchases, Billing & Cancellation</h2>
     <!-- <p><strong>6.1 One‑Time Programs.</strong> Fees are due in full at checkout and grant access only for the specified program length. No automatic renewal occurs.</p> -->
     <p><strong>6.2 Subscriptions.</strong> Subscriptions may begin with a free trial period (for example, 1 day of free access). 
-Unless you cancel before the end of the trial, your selected payment method will automatically be charged 
-the standard monthly fee of £19.99 (or the local price shown at checkout in your region) at the conclusion of the trial, and will continue to renew automatically each month thereafter 
-until cancelled. By subscribing, you authorize us (and our payment processor) to charge your selected payment method for 
-the monthly subscription fee following any free trial. We will notify you of any future price changes in advance, and such changes 
+Unless you cancel before the end of the trial, your selected payment method will automatically be charged
+the standard weekly fee of £4.99 (or the local price shown at checkout in your region) at the conclusion of the trial, and will continue to renew automatically each week thereafter
+until cancelled. By subscribing, you authorize us (and our payment processor) to charge your selected payment method for
+the weekly subscription fee following any free trial. We will notify you of any future price changes in advance, and such changes
 apply from your next renewal.</p>
 
 
@@ -88,7 +88,7 @@ apply from your next renewal.</p>
   <li>Cancel at any time by emailing <a href="mailto:info@raisingthebarapp.com" class="email">info@raisingthebarapp.com</a>.
       We’ll confirm your cancellation by email.</li>
   <li>Cancellations schedule your subscription to end at the next renewal date. You’ll continue to have full access until the end of your current billing cycle, and <strong>no further charges will occur after that point</strong>.</li>
-  <li>No pro-rated refunds are provided for partial-month usage.</li>
+  <li>No pro-rated refunds are provided for partial-week usage.</li>
   <li>Cancellations cannot be processed while a payment is overdue or an account balance remains unpaid. Any outstanding balance must be settled before cancellation takes effect.</li>
   <li>Charges already processed are final and non-refundable except as required by law or under our Money-Back Guarantee (see Refund & Cancellation Policy).</li>
  <li>Requests for information about how to cancel (e.g. asking for instructions) do not constitute a cancellation request. 
