--- a/client/pages/offer.html
+++ b/client/pages/offer.html
@@ -653,7 +653,7 @@
         <a href="tos.html" target="_blank">terms of service</a> and
         <a href="refund-policy.html" target="_blank">refund policy</a>.
         The trial lasts for 1 day. If you choose the 12-Week Plan, it renews at
-        <span class="renew-amt"></span>/month unless cancelled.
+        <span class="renew-amt"></span>/week unless cancelled.
         Cancellations take effect at the end of the current billing cycle.
       </p>
 
