--- a/client/pages/offer.html
+++ b/client/pages/offer.html
@@ -645,17 +645,18 @@
       </div>
 
       <p class="final-reassurance" id="offerDisclaimer">
-        Try the 12-Week Plan risk-free. No commitment, no hidden fees.
+        Try the 12-Week Plan risk-free. No long-term commitment, no hidden fees.
       </p>
 
       <p class="offer-disclaimer">
         By proceeding, you confirm that you’ve read and agree to our
         <a href="tos.html" target="_blank">terms of service</a> and
         <a href="refund-policy.html" target="_blank">refund policy</a>.
-        The trial lasts for 1 day. If you choose the 12-Week Plan, it renews at
-        <span class="renew-amt"></span>/week unless cancelled.
-        Cancellations take effect at the end of the current billing cycle.
+        The trial lasts for 1 day. After that, your plan runs in 30-day periods billed at <span
+          class="renew-amt"></span>/week unless cancelled. Cancellations are completed once you confirm by email and
+        take effect at the end of your current 30-day period.
       </p>
+
 
   </section>
 
