--- a/client/pages/log-in-dashboard.html
+++ b/client/pages/log-in-dashboard.html
@@ -89,8 +89,11 @@ src="https://www.facebook.com/tr?id=1217477006533345&ev=PageView&noscript=1"
         <button type="submit" class="login-btn">Continue</button>
 
         <div class="signup-link">
-          <p>Don't have an account? <a href="sign-up.html">Sign up</a></p>
-        </div>
+          <p>Don't have an account? <a href="forms.html">Sign up</a></p>
+        </div><br><br>
+          <!-- <div class="forgot-password-link">
+          <a href="forgot-password.html">Forgot your password?</a>
+        </div> -->
     </div>
   </div>
 
