--- a/client/pages/contact-us.html
+++ b/client/pages/contact-us.html
@@ -21,8 +21,12 @@
 
   <main class="container">
     <h1>Contact Us</h1>
-    <p>If you have any questions, feedback, or need support, we’d love to hear from you. Please fill out the form below,
-      and we’ll get back to you as soon as possible.</p>
+    <p>
+      If you have any questions, feedback, or need support, we’d love to hear from you. <br><br>
+      You can also <strong>use this form to submit your referrals for the £1,000 + 12-Week Coaching giveaway </strong> — just include your
+      name, email, and the names or emails of everyone you referred. <br><br>
+      We’ll get back to you as soon as possible.
+    </p>
 
     <form action="https://formspree.io/f/mjkwlapp" method="POST">
       <input type="hidden" name="_subject" value="New message from Raising The Bar contact form!">
@@ -39,7 +43,7 @@
     </form>
     <p style="margin-top: 1rem; font-size: 0.9rem;">
       You’ll receive a confirmation once your message is submitted.
-      <br>
+      <br><br>
       We aim to respond within 2–3 business days.
     </p>
 
