--- a/client/pages/forgot-password.html
+++ b/client/pages/forgot-password.html
@@ -1,19 +1,157 @@
-<form id="forgot-form" novalidate>
-    <input type="email" id="fp-email" required placeholder="Enter your email">
-    <button type="submit">Send reset link</button>
-    <span class="info" id="fp-info"></span>
-  </form>
+<!doctype html>
+<html lang="en">
+
+<head>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="icon" type="image/png" href="/favicon.png" sizes="32x32">
+  <title>Reset your password</title>
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700;800&family=Roboto:wght@400&display=swap"
+    rel="stylesheet">
+  <link href="../styles/forgot-password.css" rel="stylesheet">
+  <!-- Google tag (gtag.js) -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-W9CSNHSLQQ"></script>
   <script>
-    document.getElementById('forgot-form').addEventListener('submit', async e => {
-      e.preventDefault();
-      const email = document.getElementById('fp-email').value;
-      const res = await fetch('/api/auth/forgot-password', {
-        method: 'POST',
-        headers: {'Content-Type':'application/json'},
-        body: JSON.stringify({ email })
-      });
-      const { message } = await res.json();
-      document.getElementById('fp-info').textContent = message;
-    });
+    window.dataLayer = window.dataLayer || [];
+    function gtag() { dataLayer.push(arguments); }
+    gtag('js', new Date());
+
+    gtag('config', 'G-W9CSNHSLQQ');
   </script>
-  
+
+  <script type="text/javascript">
+    (function (c, l, a, r, i, t, y) {
+      c[a] = c[a] || function () { (c[a].q = c[a].q || []).push(arguments) };
+      t = l.createElement(r); t.async = 1; t.src = "https://www.clarity.ms/tag/" + i;
+      y = l.getElementsByTagName(r)[0]; y.parentNode.insertBefore(t, y);
+    })(window, document, "clarity", "script", "rmf0p7sik4");
+  </script>
+  <!-- TikTok Pixel Code Start -->
+  <script>
+    !function (w, d, t) {
+      w.TiktokAnalyticsObject = t; var ttq = w[t] = w[t] || []; ttq.methods = ["page", "track", "identify", "instances", "debug", "on", "off", "once",
+        "ready", "alias", "group", "enableCookie", "disableCookie", "holdConsent", "revokeConsent", "grantConsent"], ttq.setAndDefer = function (t, e
+        ) { t[e] = function () { t.push([e].concat(Array.prototype.slice.call(arguments, 0))) } }; for (var i = 0; i < ttq.methods.length; i++)ttq.setAndDefer(ttq, ttq.methods[i]); ttq.instance = function (t) {
+          for (
+            var e = ttq._i[t] || [], n = 0; n < ttq.methods.length; n++)ttq.setAndDefer(e, ttq.methods[n]); return e
+        }, ttq.load = function (e, n) {
+          var r = "https://analytics.tiktok.com/i18n/pixel/events.js", o = n && n.partner; ttq._i = ttq._i || {}, ttq._i[e] = [], ttq._i[e]._u = r, ttq._t = ttq._t || {}, ttq._t[e] = +new Date, ttq._o = ttq._o || {}, ttq._o[e] = n || {}; n = document.createElement("script")
+            ; n.type = "text/javascript", n.async = !0, n.src = r + "?sdkid=" + e + "&lib=" + t; e = document.getElementsByTagName("script")[0]; e.parentNode.insertBefore(n, e)
+        };
+
+
+      ttq.load('D0M3KORC77UCAFR1EOLG');
+      ttq.page();
+    }(window, document, 'ttq');
+  </script>
+  <!-- TikTok Pixel Code End -->
+  <!-- Meta Pixel Code -->
+  <script>
+    !function (f, b, e, v, n, t, s) {
+      if (f.fbq) return; n = f.fbq = function () {
+        n.callMethod ?
+        n.callMethod.apply(n, arguments) : n.queue.push(arguments)
+      };
+      if (!f._fbq) f._fbq = n; n.push = n; n.loaded = !0; n.version = '2.0';
+      n.queue = []; t = b.createElement(e); t.async = !0;
+      t.src = v; s = b.getElementsByTagName(e)[0];
+      s.parentNode.insertBefore(t, s)
+    }(window, document, 'script',
+      'https://connect.facebook.net/en_US/fbevents.js');
+    fbq('init', '1217477006533345');
+    fbq('track', 'PageView');
+  </script>
+  <noscript><img height="1" width="1" style="display:none"
+      src="https://www.facebook.com/tr?id=1217477006533345&ev=PageView&noscript=1" alt="Facebook pixel" /></noscript>
+  <!-- End Meta Pixel Code -->
+</head>
+
+<body>
+  <header class="header">
+    <div class="logo">
+      <a href="../index.html">
+        <img src="../assets/rtb-logo-white.png" alt="Raising The Bar logo">
+      </a>
+    </div>
+  </header>
+
+  <main class="auth-page" aria-labelledby="page-heading">
+    <h1 id="page-heading">Reset your password</h1>
+
+    <section class="auth-card" id="request-reset">
+      <h2>Forgot your password?</h2>
+      <p class="supporting-text">Enter the email you use for Raising The Bar and we'll send you a secure link to reset
+        your
+        password.</p>
+
+      <div class="status-message" id="request-status" role="status" aria-live="polite"></div>
+
+      <form id="request-reset-form" novalidate>
+        <div class="input-group">
+          <label for="reset-email">Email address</label>
+          <input type="email" id="reset-email" name="email" placeholder="you@example.com" autocomplete="email" required>
+          <span class="error-message" id="email-error" role="alert"></span>
+        </div>
+        <button type="submit" data-default="Send reset link" data-loading="Sending…">Send reset link</button>
+      </form>
+
+      <div class="link-row">
+        <a href="log-in.html">Back to log in</a>
+      </div>
+    </section>
+
+    <section class="auth-card" id="complete-reset" hidden>
+      <h2>Choose a new password</h2>
+      <p class="supporting-text">Enter a strong new password below. Once it's saved, you'll be ready to log back in.</p>
+
+      <div class="status-message" id="reset-status" role="status" aria-live="polite"></div>
+
+      <form id="complete-reset-form" novalidate>
+        <div class="input-group">
+          <label for="new-password">New password</label>
+          <input type="password" id="new-password" name="password" minlength="8" autocomplete="new-password" required>
+          <span class="error-message" id="password-error" role="alert"></span>
+        </div>
+        <div class="input-group">
+          <label for="confirm-password">Confirm password</label>
+          <input type="password" id="confirm-password" name="confirmPassword" autocomplete="new-password" required>
+          <span class="error-message" id="confirm-error" role="alert"></span>
+        </div>
+        <button type="submit" data-default="Save new password" data-loading="Saving…">Save new password</button>
+      </form>
+
+      <div class="link-row">
+        <a href="log-in.html">Back to log in</a>
+      </div>
+    </section>
+  </main>
+
+  <footer class="footer" id="footer">
+    <div class="footer-content">
+      <p>&copy; 2025 Raising The Bar App Ltd. All rights reserved.</p>
+      <div class="footer-links">
+        <a href="../index.html">Start Training</a>
+        <span class="separator">|</span>
+        <a href="legal-overview.html">Our Policies</a>
+        <span class="separator">|</span>
+        <a href="contact-us.html">Contact Us</a>
+      </div>
+      <div class="social-icons">
+        <a href="https://www.instagram.com/raising_the_bar_app/?hl=en" target="_blank" rel="noreferrer"
+          aria-label="Instagram">
+          <img src="../assets/instagram-icon.png" alt="Instagram">
+        </a>
+        <a href="https://www.youtube.com/@Raising_The_Bar_App" target="_blank" rel="noreferrer" aria-label="YouTube">
+          <img src="../assets/youtube-icon.png" alt="YouTube">
+        </a>
+        <a href="https://www.tiktok.com/@raising_the_bar_app" target="_blank" rel="noreferrer" aria-label="TikTok">
+          <img src="../assets/tiktok-icon.png" alt="TikTok">
+        </a>
+      </div>
+    </div>
+  </footer>
+
+  <script type="module" src="../scripts/forgot-password.js"></script>
+</body>
+
+</html>
