--- a/client/pages/offer.html
+++ b/client/pages/offer.html
@@ -653,7 +653,7 @@
         <a href="tos.html" target="_blank">terms of service</a> and
         <a href="refund-policy.html" target="_blank">refund policy</a>.
         The trial lasts for 1 day. After that, your plan runs in 30-day periods billed at <span
-          class="renew-amt"></span>/week unless cancelled. Cancellations are completed once you confirm by email and
+          class="renew-amt"></span>/month unless cancelled. Cancellations are completed once you confirm by email and
         take effect at the end of your current 30-day period.
       </p>
 
