--- a/client/pages/refund-policy.html
+++ b/client/pages/refund-policy.html
@@ -81,7 +81,7 @@
     <p>Subscriptions renew automatically until cancelled. By subscribing, you agree to the following billing and
       cancellation terms:</p>
     <ul>
-      <li>Subscriptions are delivered in 30-day Service Periods and billed via weekly
+      <li>Subscriptions are delivered in 30-day Service Periods and billed via monthly
         installments at the price shown at checkout.</li>
       <li>All cancellations must be requested by emailing <a
           href="mailto:info@raisingthebarapp.com">info@raisingthebarapp.com</a>. There are currently no in-app
@@ -90,7 +90,7 @@
         Unconfirmed requests or general enquiries do not constitute cancellation.</li>
       <li>Cancellations take effect at the end of your current 30-day Service Period. You retain full
         access until that date.</li>
-      <li>If you cancel partway through a Service Period, any remaining weekly installments for that period will still
+      <li>If you cancel partway through a Service Period, any remaining monthly installments for that period will still
         be charged. No pro-rated refunds are provided for the active period, and no new Service Period
         will begin after cancellation.</li>
       <li>Charges already processed are final and non-refundable except as required by law or under the Money-Back
