--- a/client/pages/tos.html
+++ b/client/pages/tos.html
@@ -52,7 +52,7 @@
         appear as “RAISING THE BAR APP” or “Pro Tracker”). Both names describe the same service and grant access to
         premium features.</li>
       <li><strong>“Service Period”</strong> means a 30-day access period for the subscription.</li>
-      <li><strong>“Billing Installments”</strong> means the weekly charges applied to pay for the current Service
+      <li><strong>“Billing Installments”</strong> means the monthly charges applied to pay for the current Service
         Period.</li>
     </ul>
 
@@ -78,9 +78,9 @@
     <!-- 6. PURCHASES, BILLING & CANCELLATION -->
     <h2>6. Purchases, Billing & Cancellation</h2>
     <!-- <p><strong>6.1 One‑Time Programs.</strong> Fees are due in full at checkout and grant access only for the specified program length. No automatic renewal occurs.</p> -->
-    <p><strong>6.2 Subscriptions.</strong> Subscriptions provide access in 30-day Service Periods, billed in weekly
-      Billing Installments at the price shown at checkout (e.g., £4.99/week). A subscription may begin with a free trial
-      (e.g., 1 day). Unless you cancel before the trial ends, the first Service Period begins automatically and weekly
+    <p><strong>6.2 Subscriptions.</strong> Subscriptions provide access in 30-day Service Periods, billed in monthly
+      Billing Installments at the price shown at checkout (e.g., £26.99/month). A subscription may begin with a free trial
+      (e.g., 1 day). Unless you cancel before the trial ends, the first Service Period begins automatically and monthly
       Billing Installments are charged during that period. We will notify you of any future price changes in advance,
       and such changes apply from your next Service Period.</p>
 
@@ -93,7 +93,7 @@
         Unconfirmed requests or general enquiries do not constitute cancellation.</li>
       <li>Cancellations take effect at the end of your current <strong>30-day Service Period</strong>. You retain full
         access until that date.</li>
-      <li>If you cancel partway through a Service Period, any remaining weekly <strong>Billing Installments</strong> for
+      <li>If you cancel partway through a Service Period, any remaining monthly <strong>Billing Installments</strong> for
         that period will still be charged. <strong>No pro-rated refunds</strong> are provided for the active period, and
         no new Service Period will begin after cancellation.</li>
       <li>Cancellations cannot be processed while a payment is overdue or an account balance remains unpaid. Any
