--- a/client/pages/dashboard.html
+++ b/client/pages/dashboard.html
@@ -179,7 +179,7 @@
         <div class="referral-banner__headline">
           <span class="referral-banner__icon" aria-hidden="true">🏆</span>
           <div>
-            <h2>Win £1,000  + <br>12 Weeks of 1-on-1 Coaching</h2>
+            <h2>Earn £20</h2>
             <!-- <p class="referral-banner__subtitle">Each referral = one entry this month.</p> -->
           </div>
         </div>
@@ -197,10 +197,10 @@
       </div>
 
       <div class="referral-banner__side">
-        <p class="referral-banner__note">More referrals = more chances to win.</p>
+        <p class="referral-banner__note">More referrals = more money to earn.</p>
         <a class="referral-banner__button" href="contact-us.html">Submit Referrals</a>
         <div class="referral-banner__trust" aria-live="polite">
-          <p style="text-align: center;">💸 £5,000+ awarded so far <br> 🏅 September winner: Tom B.</p>
+          <p style="text-align: center;">💸 £5,000+ awarded so far</p>
         </div>
       </div>
     </div>
