New Success Page

--- a/client/pages/dashboard.html
+++ b/client/pages/dashboard.html
@@ -179,7 +179,7 @@
         <div class="referral-banner__headline">
           <span class="referral-banner__icon" aria-hidden="true">🏆</span>
           <div>
-            <h2>Earn £20</h2>
+            <h2>Earn £15</h2>
             <!-- <p class="referral-banner__subtitle">Each referral = one entry this month.</p> -->
           </div>
         </div>
@@ -189,7 +189,7 @@
         </p> -->
 
         <p class="referral-banner__steps">
-          <strong>How to enter:</strong>
+          <strong>How to earn:</strong>
           Friends claim their plan at
           <a href="https://raisingthebarapp.com" class="referral-banner__link">raisingthebarapp.com</a>,
           then contact us with your name, email, and who you referred.
