Referral Timer Implementation

--- a/client/pages/dashboard.html
+++ b/client/pages/dashboard.html
@@ -92,7 +92,7 @@
     <!-- End Meta Pixel Code -->
   </header>
 
- 
+
 
   <div id="trackerBadge"></div>
 
@@ -173,8 +173,12 @@
 
   </section>
 
-   <section class="referral-banner" aria-label="Referral giveaway">
+  <section class="referral-banner" aria-label="Referral giveaway">
     <div class="referral-banner__inner">
+      <div class="referral-banner__timer" id="referralCountdown" role="status" aria-live="polite">
+        <span class="referral-banner__timer-label">Ends in</span>
+        <span class="referral-banner__timer-value" data-default="24:00:00">24:00:00</span>
+      </div>
       <div class="referral-banner__copy">
         <div class="referral-banner__headline">
           <span class="referral-banner__icon" aria-hidden="true">🏆</span>
@@ -190,9 +194,9 @@
 
         <p class="referral-banner__steps">
           <strong>How to earn:</strong>
-          Friends claim their plan at
+          Friends purchase their plan at
           <a href="https://raisingthebarapp.com" class="referral-banner__link">raisingthebarapp.com</a>,
-          then contact us with your name, email, and who you referred.
+          then contact us with the email of who you referred.
         </p>
       </div>
 
