Updated Referral Program

--- a/client/pages/dashboard.html
+++ b/client/pages/dashboard.html
@@ -183,7 +183,7 @@
         <div class="referral-banner__headline">
           <span class="referral-banner__icon" aria-hidden="true">🏆</span>
           <div>
-            <h2>Earn £15</h2>
+            <h2>Earn £10 <br>cash</h2>
             <!-- <p class="referral-banner__subtitle">Each referral = one entry this month.</p> -->
           </div>
         </div>
@@ -202,7 +202,7 @@
 
       <div class="referral-banner__side">
         <p class="referral-banner__note">More referrals = more money to earn.</p>
-        <a class="referral-banner__button" href="contact-us.html">Submit Referrals</a>
+        <a class="referral-banner__button" href="contact-us.html">Submit Referrals Now</a>
         <div class="referral-banner__trust" aria-live="polite">
           <p style="text-align: center;">💸 £5,000+ awarded so far</p>
         </div>
