--- a/client/pages/contact-us.html
+++ b/client/pages/contact-us.html
@@ -23,8 +23,8 @@
     <h1>Contact Us</h1>
     <p>
       If you have any questions, feedback, or need support, we’d love to hear from you. <br><br>
-      You can also <strong>use this form to submit your referrals for the £15 giveaway </strong> — just include your
-      name, email, and the names or emails of everyone you referred. <br><br>
+      You can also <strong>use this form to submit your referrals for the £10 giveaway </strong> — just include your
+      name, email, and the names and emails of everyone you referred. <br><br>
       We’ll get back to you as soon as possible.
     </p>
 
