Fixed Upsell Payment Bug

--- a/client/pages/offer.html
+++ b/client/pages/offer.html
@@ -648,14 +648,16 @@
         Try the 12-Week Plan risk-free. No long-term commitment, no hidden fees.
       </p>
 
-      <p class="offer-disclaimer">
-        By proceeding, you confirm that you’ve read and agree to our
-        <a href="tos.html" target="_blank">terms of service</a> and
-        <a href="refund-policy.html" target="_blank">refund policy</a>.
-        The trial lasts for 1 day. After that, your plan runs in 30-day periods billed at <span
-          class="renew-amt"></span>/month unless cancelled. Cancellations are completed once you confirm by email and
-        take effect at the end of your current 30-day period.
-      </p>
+<p class="offer-disclaimer">
+  By proceeding, you confirm that you’ve read and agree to our
+  <a href="tos.html" target="_blank">terms of service</a> and
+  <a href="refund-policy.html" target="_blank">refund policy</a>.
+  Your free trial lasts for 1 day, then renews every 30 days at
+  <span class="renew-amt"></span>/month unless cancelled.
+  You may also be offered an optional bonus after checkout, which
+  adds extra features for a one-time charge of £19.99.
+  Cancellations take effect at the end of your current 30-day period.
+</p>
 
 
   </section>
