--- a/client/pages/payment-success.html
+++ b/client/pages/payment-success.html
@@ -1,5 +1,6 @@
 <!doctype html>
 <html lang="en">
+
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -7,33 +8,34 @@
   <title>Payment Successful</title>
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="../styles/payment-success.css">
-   <!-- TikTok Pixel Code Start -->
-    <script>
-      !function (w, d, t) {
-        w.TiktokAnalyticsObject = t; var ttq = w[t] = w[t] || []; ttq.methods = ["page", "track", "identify", "instances", "debug", "on", "off", "once", "ready", "alias", "group", "enableCookie", "disableCookie", "holdConsent", "revokeConsent", "grantConsent"], ttq.setAndDefer = function (t, e) { t[e] = function () { t.push([e].concat(Array.prototype.slice.call(arguments, 0))) } }; for (var i = 0; i < ttq.methods.length; i++)ttq.setAndDefer(ttq, ttq.methods[i]); ttq.instance = function (t) {
-          for (
-            var e = ttq._i[t] || [], n = 0; n < ttq.methods.length; n++)ttq.setAndDefer(e, ttq.methods[n]); return e
-        }, ttq.load = function (e, n) {
-          var r = "https://analytics.tiktok.com/i18n/pixel/events.js", o = n && n.partner; ttq._i = ttq._i || {}, ttq._i[e] = [], ttq._i[e]._u = r, ttq._t = ttq._t || {}, ttq._t[e] = +new Date, ttq._o = ttq._o || {}, ttq._o[e] = n || {}; n = document.createElement("script")
-            ; n.type = "text/javascript", n.async = !0, n.src = r + "?sdkid=" + e + "&lib=" + t; e = document.getElementsByTagName("script")[0]; e.parentNode.insertBefore(n, e)
-        };
+  <!-- TikTok Pixel Code Start -->
+  <script>
+    !function (w, d, t) {
+      w.TiktokAnalyticsObject = t; var ttq = w[t] = w[t] || []; ttq.methods = ["page", "track", "identify", "instances", "debug", "on", "off", "once", "ready", "alias", "group", "enableCookie", "disableCookie", "holdConsent", "revokeConsent", "grantConsent"], ttq.setAndDefer = function (t, e) { t[e] = function () { t.push([e].concat(Array.prototype.slice.call(arguments, 0))) } }; for (var i = 0; i < ttq.methods.length; i++)ttq.setAndDefer(ttq, ttq.methods[i]); ttq.instance = function (t) {
+        for (
+          var e = ttq._i[t] || [], n = 0; n < ttq.methods.length; n++)ttq.setAndDefer(e, ttq.methods[n]); return e
+      }, ttq.load = function (e, n) {
+        var r = "https://analytics.tiktok.com/i18n/pixel/events.js", o = n && n.partner; ttq._i = ttq._i || {}, ttq._i[e] = [], ttq._i[e]._u = r, ttq._t = ttq._t || {}, ttq._t[e] = +new Date, ttq._o = ttq._o || {}, ttq._o[e] = n || {}; n = document.createElement("script")
+          ; n.type = "text/javascript", n.async = !0, n.src = r + "?sdkid=" + e + "&lib=" + t; e = document.getElementsByTagName("script")[0]; e.parentNode.insertBefore(n, e)
+      };
 
 
-        ttq.load('D0M3KORC77UCAFR1EOLG');
-        ttq.page();
-      }(window, document, 'ttq');
-    </script>
-    <!-- TikTok Pixel Code End -->
+      ttq.load('D0M3KORC77UCAFR1EOLG');
+      ttq.page();
+    }(window, document, 'ttq');
+  </script>
+  <!-- TikTok Pixel Code End -->
 </head>
+
 <body>
   <header class="success-header" role="banner">
-  <div class="header">
-    <div class="logo">
-      <a href="../index.html">
-        <img id="logo" class="logo" src="../assets/rtb-logo-white.png" alt="Raising The Bar Logo">
-      </a>
+    <div class="header">
+      <div class="logo">
+        <a href="../index.html">
+          <img id="logo" class="logo" src="../assets/rtb-logo-white.png" alt="Raising The Bar Logo">
+        </a>
+      </div>
     </div>
-  </div>
     <div class="progress" aria-label="Checkout progress" role="status">
       <div class="progress-heading">
         <span class="progress-step-label">Step 2 of 3</span>
@@ -65,7 +67,8 @@
       <div class="carousel" aria-live="polite">
         <div class="carousel-track">
           <article class="carousel-slide is-active">
-            <img src="../assets/reps-sets.png" width="140" height="140" alt="" loading="lazy" decoding="async" aria-hidden="true">
+            <img src="../assets/reps-sets.png" width="140" height="140" alt="" loading="lazy" decoding="async"
+              aria-hidden="true">
             <h2 class="carousel-title">Workout Progression</h2>
             <p class="carousel-copy">Adapts weekly to your strength and recovery.</p>
           </article>
@@ -75,12 +78,14 @@
             <p class="carousel-copy">Instant recaps after every session.</p>
           </article> -->
           <article class="carousel-slide" aria-hidden="true">
-            <img src="../assets/progress-tracking.PNG" width="140" height="140" alt="" loading="lazy" decoding="async" aria-hidden="true">
+            <img src="../assets/progress-tracking.PNG" width="140" height="140" alt="" loading="lazy" decoding="async"
+              aria-hidden="true">
             <h2 class="carousel-title">Progress Tracking</h2>
             <p class="carousel-copy">See trends across lifts and habits in one place.</p>
           </article>
           <article class="carousel-slide" aria-hidden="true">
-            <img src="../assets/weekly-recap.png" width="140" height="140" alt="" loading="lazy" decoding="async" aria-hidden="true">
+            <img src="../assets/weekly-recap.png" width="140" height="140" alt="" loading="lazy" decoding="async"
+              aria-hidden="true">
             <h2 class="carousel-title">Weekly Recaps</h2>
             <p class="carousel-copy">Celebrate wins and refocus fast each week.</p>
           </article>
@@ -100,15 +105,15 @@
     </section>
   </main>
 
-      <div class="floating-cta-container" id="floatingCtaContainer">
-      <div class="floating-cta -cta" id="floating-cta">
-        <button id="claimProgramBtn" class="claim-program-btn">Add to my plan</button>
-      </div>
+  <div class="floating-cta-container" id="floatingCtaContainer">
+    <div class="floating-cta -cta" id="floating-cta">
+      <button id="claimProgramBtn" class="claim-program-btn">Add to my plan</button>
     </div>
-    <div id="ctaStopContainer"></div>
+  </div>
+  <div id="ctaStopContainer"></div>
 
   <script>
-      (function () {
+    (function () {
       const track = document.querySelector('.carousel-track');
       const slides = Array.from(document.querySelectorAll('.carousel-slide'));
       const dots = Array.from(document.querySelectorAll('.carousel-dot'));
@@ -122,13 +127,13 @@
       const urlParams = new URLSearchParams(window.location.search);
       const sessionId = urlParams.get('session_id') || localStorage.getItem('rtb:lastCheckoutSession') || '';
 
-            const setupIntentId = urlParams.get('setup_intent') || localStorage.getItem('rtb:lastSetupIntent') || '';
+      const setupIntentId = urlParams.get('setup_intent') || localStorage.getItem('rtb:lastSetupIntent') || '';
 
       if (sessionId) {
         localStorage.setItem('rtb:lastCheckoutSession', sessionId);
       }
 
-            if (setupIntentId) {
+      if (setupIntentId) {
         localStorage.setItem('rtb:lastSetupIntent', setupIntentId);
       }
 
@@ -279,8 +284,8 @@
             throw new Error(result?.message || 'We need an extra approval before we can add the bonus.');
           }
 
-          statusEl.textContent = 'Bonus added! Redirecting you to your dashboard…';
-          const redirectUrl = result?.redirectUrl || '/pages/dashboard.html';
+          statusEl.textContent = 'Bonus added! Finalizing your upgrade…';
+          const redirectUrl = result?.redirectUrl || '/pages/plan-upgrade.html';
           window.setTimeout(() => {
             window.location.href = redirectUrl;
           }, 800);
@@ -296,4 +301,5 @@
     })();
   </script>
 </body>
+
 </html>
