Offer Page Polish

--- a/client/pages/dashboard.html
+++ b/client/pages/dashboard.html
@@ -183,7 +183,7 @@
         <div class="referral-banner__headline">
           <span class="referral-banner__icon" aria-hidden="true">🏆</span>
           <div>
-            <h2>Earn £10 <br>cash</h2>
+            <h2>Earn £10</h2>
             <!-- <p class="referral-banner__subtitle">Each referral = one entry this month.</p> -->
           </div>
         </div>
@@ -194,7 +194,7 @@
 
         <p class="referral-banner__steps">
           <strong>How to earn:</strong>
-          Friends purchase their plan at
+          Friends claim their plan at
           <a href="https://raisingthebarapp.com" class="referral-banner__link">raisingthebarapp.com</a>,
           then contact us with the email of who you referred.
         </p>
